<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.booklisting.MainActivity">
    <ProgressBar
    style="@style/Widget.AppCompat.ProgressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/progress"
    android:visibility="gone"
    android:layout_centerInParent="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/mainlinear">


        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/scroll"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:orientation="vertical"
                    android:id="@+id/searchlayout"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true">
                        <EditText
                            android:id="@+id/rinkiklis"
                            android:layout_width="@dimen/weighted"
                            android:imeOptions="actionSearch"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:inputType="textPersonName"
                         />
                        <Button
                            android:foreground="?attr/selectableItemBackground"
                            android:layout_width="@dimen/weighted"
                            android:layout_height="@dimen/searchimage"
                            android:layout_weight="1"
                            android:background="@drawable/glass"
                            android:id="@+id/searchButton"/></LinearLayout>
                </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mostpopular"
       >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_popular_books"
            android:textSize="@dimen/largeText"
            android:id="@+id/popular"
            android:textAlignment="center"/>
        <RelativeLayout
            android:layout_marginTop="@dimen/marginTopVerySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/popular">

            <RelativeLayout
                android:layout_marginTop="@dimen/marginTopVerySmall"
                android:id="@+id/pirmaslayout"
                android:layout_width="@dimen/imageWidth"
                android:layout_height="@dimen/imageHeight"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/treciaslayout">

                <ImageView
                    android:id="@+id/pirmas"
                    style="@style/image"
                    android:src="@drawable/primas" />

                <TextView
                    style="@style/PictureTextview"
                    android:text="@string/don_quixote" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/imageWidth"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/MarginEnd"
                android:id="@+id/antraslayout"
                android:layout_marginTop="@dimen/MarginTop">
            <ImageView
                android:id="@+id/antras"
                style="@style/image"
                android:src="@drawable/antras" />
            <TextView
                style="@style/PictureTextview"
                android:text="@string/a_tale_of_two_cities" />
        </RelativeLayout>
        <RelativeLayout
    android:layout_width="@dimen/imageWidth"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/MarginTopSmall"
    android:layout_marginLeft="@dimen/marginLeft"
    android:layout_below="@+id/pirmaslayout"
    android:id="@+id/treciaslayout">
        <ImageView
            android:layout_width="@dimen/imageWidth"
            android:layout_height="@dimen/imageHeight"
            android:id="@+id/trecias"
            android:src="@drawable/trecias"
            android:scaleType="centerCrop"/>
            <TextView
                style="@style/PictureTextview"
                android:text="@string/the_lord_of_the_rings"/>
        </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/imageWidth"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/antraslayout"
                android:layout_below="@+id/antraslayout"
                android:layout_marginTop="32dp">
                <ImageView
                    android:id="@+id/ketvirtas"
                    style="@style/image"
                    android:src="@drawable/ketvirtas" />
                <TextView
                    style="@style/PictureTextview"
                    android:text="@string/the_little_prince" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/imageWidth"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/treciaslayout"
                android:layout_below="@+id/treciaslayout"
                android:layout_marginTop="@dimen/MarginTopSmall"
                android:paddingBottom="@dimen/paddingbottom">

                <ImageView
                    style="@style/image"
                    android:id="@+id/penktas"
                    android:src="@drawable/penktas" />

                <TextView
                    style="@style/PictureTextview"
                    android:text="@string/harry_potter" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlistlayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/mainlinear"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:id="@+id/emptyview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    </RelativeLayout>